--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,25 @@ name = "agentic-ai-trip-planner-system"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = []
+requires-python = ">=3.10,<3.13"
+dependencies = [
+    "fastapi>=0.128.0",
+    "httpx>=0.28.1",
+    "langchain>=1.2.0",
+    "langchain-community>=0.4.1",
+    "langchain-experimental>=0.4.1",
+    "langchain-google-community[places]>=3.0.2",
+    "langchain-groq>=1.1.1",
+    "langchain-openai>=1.1.6",
+    "langchain-tavily>=0.2.16",
+    "langgraph>=1.0.5",
+    "pydantic>=2.12.5",
+    "python-dotenv>=1.2.1",
+    "pyyaml>=6.0.3",
+    "requests>=2.32.5",
+    "streamlit>=1.52.2",
+    "uvicorn>=0.40.0",
+]
 
 [tool.uv.workspace]
 members = [
